real-project/colmap/test-lambda/classification_results/non_compilable/test_4.cpp.log
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_4.cpp:14:3: error: use of undeclared identifier 'NewTest'
   14 |   NewTest();
      |   ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_4.cpp:16:5: error: use of undeclared identifier 'ConsistencyChecker'
   16 |     ConsistencyChecker();
      |     ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_4.cpp:20:3: error: use of undeclared identifier 'NewTest'
   20 |   NewTest();
      |   ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_4.cpp:22:5: error: use of undeclared identifier 'TransiveChecker'
   22 |     TransiveChecker();
      |     ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_4.cpp:26:3: error: use of undeclared identifier 'NewTest'
   26 |   NewTest();
      |   ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_4.cpp:28:5: error: use of undeclared identifier 'SymmetryChecker'
   28 |     SymmetryChecker();
      |     ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_4.cpp:32:3: error: use of undeclared identifier 'NewTest'
   32 |   NewTest();
      |   ^
/home/lizhilin/compare-order/real-project/colmap/test-lambda/test_4.cpp:34:5: error: use of undeclared identifier 'ReflexivityChecker'
   34 |     ReflexivityChecker();
      |     ^
8 errors generated.
